public/stylesheets/application.css
body {
  font-family: Verdana, Helvetica, Arial;
  font-size: 14px; }

.clear {
  clear: both;
  height: 0;
  overflow: hidden; }

#header {
  background-color: #222222;
  color: whiteSmoke;
  margin-bottom: 20px;
  padding: 20px 60px;
  overflow: hidden; }
  #header #title {
    float: left;
    font-size: 40px;
    font-weight: bold; }

    #header #title #subtitle {
      text-align: right;
      font-size: 15px; }
  #header a, #header a:visited {
    color: white;
  }

#container #flash_messages .flash {
  border-radius: 6px;
  -webkit-border-radius: 6px;
  -moz-border-radius: 6px;
  font-weight: bold;
  text-align: center; }
#container #side_panel {
  padding: 5px;
  margin-left: 25px;
  float: left;
  width: 15%; }
  #container #side_panel .wrap {
    -webkit-box-shadow: -2px 7px 17px #000222;
    -moz-box-shadow: -2px 7px 17px #000222;
    box-shadow: -2px 7px 17px #000222;
    background: #cecece;
    color: #222222;
    border-radius: 5px;
    margin-bottom: 20px;
    padding: 15px; }
  #container #side_panel #links_notes a {
    text-align: center;
    color: whiteSmoke;
    text-decoration: none;
    font-weight: bold;
    background: #222222;
    padding: 10px;
    margin: 15px 10px;
    border-radius: 5px; }
  #container #side_panel #tag_cloud a {
    color: #222222;
    text-decoration: none;
    font-weight: bold; }
#container #content {
  padding: 5px;
  float: right;
  width: 80%;
  margin: auto; }
  #container #content .note {
    background: #f2f2bf;
    display: inline;
    float: left;
    padding: 15px;
    margin: 15px;
    width: 220px;
    height: 200px;
    border: solid 1px #222222;
    border-radius: 5px;
    -webkit-box-shadow: -2px 7px 17px #000222;
    -moz-box-shadow: -2px 7px 17px #000222;
    box-shadow: -2px 7px 17px #000222; }
    #container #content .note .title {
      font-size: 20px;
      padding: 0 5px;
      margin: 0 0 10px 0; }
      #container #content .note .title .date {
        float: right;
        font-size: 10px;
        text-align: right; }
    #container #content .note .body {
      height: 100px;
      padding: 5px;
      margin: 8px 0; }
    #container #content .note .tags {
      min-height: 15px;
      padding: 5px; }
#container #footer {
  padding: 10px;
  text-align: center; }

#flash_notice,
#flash_error {
  border-radius: 6px;
  -moz-border-radius: 6px;
  -webkit-border-radius: 6px;
  font-weight: bold;
  text-align: center; }

.fieldWithErrors {
  display: inline; }

#nota_form {
  margin: 20px 0;
  border: solid 5px #cecece;
  padding: 10px;
  border-radius: 5px; }
  #nota_form input[type=text], #nota_form select, #nota_form input[type=submit], #nota_form textarea {
    border: 1px solid #cecece;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px; }
  #nota_form .label {
    float: left;
    text-align: left;
    padding: 5px 10px;
    font-weight: bold;
    width: 70px; }
  #nota_form .inputs {
    padding-left: 5px; }
  #nota_form .body_label {
    padding: 10px;
    font-weight: bold; }
  #nota_form a {
    color: black;
    text-decoration: none; }

#sortable li {
  margin: 20px 15px;
  padding: 1px;
  float: left;
  width: 220px;
  height: 200px;
  padding: 15px;
  display: inline; }
#sortable .nota {
  background: white;
  filter: alpha(opacity=80);
  -moz-opacity: 0.8;
  -khtml-opacity: 0.8;
  opacity: 0.8;
  width: 220px;
  border: solid 1px;
  border-radius: 10px;
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px; }
  #sortable .nota .content {
    height: 160px; }
  #sortable .nota .link {
    clear: both; }
  #sortable .nota .title span {
    cursor: pointer;
    font-size: 12px;
    padding: 3px; }
  #sortable .nota .title .info a {
    color: black;
    text-decoration: none; }

#nota_container #nota_show {
  width: 70%;
  margin-left: 30px;
  min-height: 300px; }
  #nota_container #nota_show .content {
    min-height: 300px;
    border: 1px solid #cecece;
    border-radius: 7px;
    padding: 15px;
    font-size: 1em; }
  #nota_container #nota_show #header_note {
    font-size: 1em; }
  #nota_container #nota_show #title_note {
    font-size: 2em;
    font-weight: bold; }
  #nota_container #nota_show #body_note {
    min-height: 180px;
    font-size: 2em; }
  #nota_container #nota_show #tags {
    font-size: 13px;
    font-weight: bold; }
    #nota_container #nota_show #tags .tag {
      border-radius: 5px;
      -moz-border-radius: 5px;
      -webkit-border-radius: 5px;
      border: solid 1px #222222;
      padding: 5px;
      background-color: #222222;
      margin: 10px; }
      #nota_container #nota_show #tags .tag a {
        color: white;
        text-decoration: none; }
#nota_container #nota_panel {
  margin-right: 40px;
  padding: 15px;
  float: right;
  width: 18%;
  color: #222222;
  border: 1px solid #cecece;
  border-radius: 7px;
  padding: 15px;
  min-height: 300px; }
  #nota_container #nota_panel .content {
    min-height: 250px; }
  #nota_container #nota_panel .value {
    font-size: 2em;
    font-weight: bold; }
  #nota_container #nota_panel #vote {
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border: solid 1px;
    padding: 3px 8px;
    background-color: #222222;
    font-size: 12px; }
    #nota_container #nota_panel #vote a {
      color: white;
      text-decoration: none; }
    #nota_container #nota_panel #vote:hover {
      background-color: #cccccc; }
      #nota_container #nota_panel #vote:hover a {
        color: #222222; }
  #nota_container #nota_panel #link_index a {
    padding: 5px;
    text-decoration: none;
    border: 1px solid #222222;
    border-radius: 4px;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    background-color: #222222;
    color: #cccccc; }

.left {
  float: left; }

.right {
  float: right; }

.pagination {
  padding: 10px;
  text-align: center; }
  .pagination em {
    text-decoration: underline; }
  .pagination a,
  .pagination span {
    text-decoration: none;
    padding: 1px 5px;
    margin: 0 0 0 2px;
    font-weight: bold; }
    .pagination a:link, .pagination a:visited,
    .pagination span:link,
    .pagination span:visited {
      text-decoration: none;
      color: black;
      -moz-border-radius: 3px;
      -webkit-border-radius: 3px; }
    .pagination a:hover, .pagination a:active,
    .pagination span:hover,
    .pagination span:active {
      background: #cccccc;
      color: #222222;
      text-decoration: none;
      -moz-border-radius: 3px;
      -webkit-border-radius: 3px; }
  .pagination span .current {
    font-weight: bold;
    background: #cccccc;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px; }
  .pagination span .disabled {
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px; }

#note_counter {
  font-size: 15px; }

.counter {
  color: #696868;
  font-weight: bold;
  font-size: small;
  margin-left: 80px; }

#search_form {
  float: right;
  clear: both; }
  #search_form input, #search_form select {
    border: 1px solid #cecece;
    border-radius: 5px;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px; }
  #search_form th {
    padding-left: 8px;
    font-size: 12px;
    text-align: left; }

#search_result {
  padding: 20px;
  font-size: 35px;
  font-weight: bold;
  color: white;
  text-align: center; }

.on_the_spot_editing {
  width: 100%;
  border-radius: 5px; }
  .on_the_spot_editing input {
    display: block;
    font-size: 20px;
    border-radius: 8px; }
  .on_the_spot_editing input[type=submit] {
    background: green; }

#comments_note {
  margin: 5px;
  padding: 5px;
  background: #cbdaf5;
  border: solid 1px #cecece;
  border-radius: 3px; }

#comment_form {
  margin-top: 15px; }
  #comment_form input, #comment_form textarea {
    border-radius: 3px; }

.list_comments {
  margin: 5px;
  padding: 5px; }
  .list_comments .comment {
    margin: 10px 0; }
    .list_comments .comment .info {
      font-size: 12px;
      padding: 5px; }
    .list_comments .comment .body {
      background: #dae9f5;
      padding: 10px;
      border: 1px solid #222222; }

